mobile ui: fixed terms nav alignment and another glitch with the logo

--- a/src/assets/scss/layout/_logo-section.scss
+++ b/src/assets/scss/layout/_logo-section.scss
@@ -53,11 +53,11 @@
     color: $gray-500;
 
     .narrow & {
-      width: 13rem;
+      width: 12rem;
     }
 
     .wide & {
-      width: calc(100% - 17rem);
+      width: calc(100% - 18rem);
     }
 
     .currency-ticker {
